# house-keeper

./: .env  Cargo.toml  README.MD
curl-test/: create-house.sh  delete-house.sh  download-image.sh  login.sh  query-house-detail.sh  query-houses.sh  set-house-members.sh  update-house-detail.sh  upload-image.sh
data/: house.json  user.json
data/house/: 5be1e2fa-cfde-40bf-8de7-de743f46c1d1.json  aa387178-3d67-48fd-ab7e-cf49568273cc.json  df83f69d-587a-4952-84e9-aa0f77141b73.json
doc/: API.md
frontend/: data.js  house-create.html  index.html  login.html  my-houses.html  search.html
frontend/js/: house-create.js  index.js  login.js  my-houses.js  search.js
src/: main.rs
src/models/: error.rs  house.rs  image.rs  mod.rs  user.rs
src/routes/: auth.rs  backup.rs  houses.rs  images.rs  mod.rs  static_files.rs
src/storage/: backup.rs  backup_manager.rs  file_storage.rs  mod.rs
