[package]
name = "house-keeper"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
regex = "1.5"
mime_guess = "2.0"
tempfile = "3.3"
bytes = "1.4"
env_logger = "0.11" 
log = "0.4"
